Delete tsx in index.html, fix page name in index.html, modify base in vite config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "abel-tbf.github.io/todo-app",
+  "homepage": "https://abel-tbf.github.io/todo-app/",
   "name": "todo-app",
   "private": true,
   "version": "0.0.0",
